Fixed right "gutter" on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -744,6 +744,11 @@ nav {
 
 // Mobile Phone
 @media screen and (max-width:600px) {
+    html {
+        display: flex;
+        width: 100%;
+    }
+
     .two-thirds {
         max-width: 86%;
     }
@@ -789,7 +794,7 @@ nav {
     }
 
     .inside-container {
-        padding: 1em;
+        padding: 0;
     }
 
     .site-nav {
